--- a/package.json
+++ b/package.json
@@ -72,8 +72,10 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
     "clipboard": "^2.0.8",
+    "jszip": "^3.7.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.4.0",
+    "source-map": "^0.7.3"
   }
 }
