--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "style-loader": "3.3.1",
     "stylelint": "14.0.1",
     "stylelint-config-standard": "23.0.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.4.4",
     "webpack": "^5.61.0",
     "webpack-cdn-plugin": "^3.3.1",
