--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.4.4",
     "webpack": "^5.61.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cdn-plugin": "^3.3.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0",
@@ -73,6 +74,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
     "clipboard": "^2.0.8",
+    "core-js": "^3.19.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "rxjs": "^7.4.0"
