--- a/package.json
+++ b/package.json
@@ -14,48 +14,48 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
-    "@s4p/eslint-config": "5.1.1",
-    "@types/lodash": "^4.14.176",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "autoprefixer": "10.4.0",
+    "@s4p/eslint-config": "^5.1.1",
+    "@types/lodash": "^4.14.177",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "concurrently": "^6.3.0",
-    "copy-webpack-plugin": "9.0.1",
-    "css-loader": "6.5.0",
-    "css-minimizer-webpack-plugin": "3.1.1",
-    "eslint": "8.1.0",
-    "eslint-config-alloy": "4.4.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "4.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "concurrently": "^6.4.0",
+    "copy-webpack-plugin": "^9.1.0",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
+    "eslint": "^8.3.0",
+    "eslint-config-alloy": "^4.4.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "file-loader": "^6.2.0",
     "glob": "^7.2.0",
     "html-inline-css-webpack-plugin": "^1.11.1",
     "html-webpack-plugin": "^5.5.0",
     "html-webpack-tags-plugin": "^3.0.2",
-    "http-server": "14.0.0",
-    "mini-css-extract-plugin": "2.4.3",
-    "node-sass": "6.0.1",
-    "postcss-loader": "6.2.0",
+    "http-server": "^14.0.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^6.0.1",
+    "postcss-loader": "^6.2.1",
     "postcss-px-to-viewport": "^1.1.1",
-    "prettier": "2.4.1",
+    "prettier": "^2.5.0",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^5.0.0-beta.1",
-    "sass-loader": "12.3.0",
-    "style-loader": "3.3.1",
-    "stylelint": "14.0.1",
-    "stylelint-config-standard": "23.0.0",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-standard": "^23.0.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.4.4",
-    "webpack": "^5.61.0",
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cdn-plugin": "^3.3.1",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
+    "webpack-dev-server": "^4.6.0",
     "webpack-merge": "^5.8.0"
   },
   "browserslist": {
@@ -69,10 +69,10 @@
     ]
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.0",
-    "@popperjs/core": "^2.10.2",
+    "@babel/runtime": "^7.16.3",
+    "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.0",
+    "bootstrap-icons": "^1.7.1",
     "clipboard": "^2.0.8",
     "core-js": "^3.19.1",
     "localforage": "^1.10.0",
