chore: fix lint failed

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "webpack serve --progress --config webpack.config.dev.js",
     "start:preview": "webpack --progress --config webpack.config.prod.js && http-server -p 9000 ./dist -o",
     "build": "webpack --progress --config webpack.config.prod.js",
-    "lint:js": "eslint src/**/*.ts",
-    "lint:styles": "stylelint \"src/**/*.scss\"",
-    "lint": "concurrently \"npm:lint:* -- --fix\"",
+    "lint:tsc": "tsc --noEmit",
+    "lint:eslint": "eslint src/**/*.ts",
+    "lint:styles": "stylelint src/**/*.scss",
+    "lint": "concurrently npm:lint:tsc \"npm:lint:eslint -- --fix\" \"npm:lint:styles -- --fix\"",
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
@@ -40,8 +41,10 @@
     "http-server": "^14.0.0",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
+    "postcss": "^8.4.4",
     "postcss-loader": "^6.2.1",
     "postcss-px-to-viewport": "^1.1.1",
+    "postcss-scss": "^4.0.2",
     "prettier": "^2.5.0",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^5.0.0-beta.1",
